--- a/Exercicios II/ex022/fun006.html
+++ b/Exercicios II/ex022/fun006.html
@@ -8,15 +8,24 @@
     <style>
         body{
             height: 100vh;
+           
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
-        }
+            background-attachment: fixed;
+            
+           background: color>image>position>repeat>[size]>attachment
+
+            /*
+            background: black url('imagens/wallpaper002.jpg') center center 
+            no-repeat fixed;
+            */
+        }   
         main{
             background-color: white;
-            width: 500px;
+            max-width: 300px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -46,6 +55,63 @@
               pariatur tenetur enim quo atque 
               nesciunt temporibus labore unde 
               nemo odio perferendis eum possimus.
+              Lorem ipsum dolor sit amet consectetur 
+            adipisicing elit. Facere explicabo dolore
+             modi magni ducimus ratione, rerum
+              pariatur tenetur enim quo atque 
+              nesciunt temporibus labore unde 
+              nemo odio perferendis eum possimus.
+              Lorem ipsum dolor sit amet consectetur 
+            adipisicing elit. Facere explicabo dolore
+             modi magni ducimus ratione, rerum
+              pariatur tenetur enim quo atque 
+              nesciunt temporibus labore unde 
+              nemo odio perferendis eum possimus.
+              Lorem ipsum dolor sit amet consectetur 
+            adipisicing elit. Facere explicabo dolore
+             modi magni ducimus ratione, rerum
+              pariatur tenetur enim quo atque 
+              nesciunt temporibus labore unde 
+              nemo odio perferendis eum possimus.
+              Lorem ipsum dolor sit amet consectetur 
+            adipisicing elit. Facere explicabo dolore
+             modi magni ducimus ratione, rerum
+              pariatur tenetur enim quo atque 
+              nesciunt temporibus labore unde 
+              nemo odio perferendis eum possimus.
+              Lorem ipsum dolor sit amet consectetur 
+            adipisicing elit. Facere explicabo dolore
+             modi magni ducimus ratione, rerum
+              pariatur tenetur enim quo atque 
+              nesciunt temporibus labore unde 
+              nemo odio perferendis eum possimus.
+              Lorem ipsum dolor sit amet consectetur 
+            adipisicing elit. Facere explicabo dolore
+             modi magni ducimus ratione, rerum
+              pariatur tenetur enim quo atque 
+              nesciunt temporibus labore unde 
+              nemo odio perferendis eum possimus.
+              Lorem ipsum dolor sit amet consectetur 
+            adipisicing elit. Facere explicabo dolore
+             modi magni ducimus ratione, rerum
+              pariatur tenetur enim quo atque 
+              nesciunt temporibus labore unde 
+              nemo odio perferendis eum possimus.
+              Lorem ipsum dolor sit amet consectetur 
+            adipisicing elit. Facere explicabo dolore
+             modi magni ducimus ratione, rerum
+              pariatur tenetur enim quo atque 
+              nesciunt temporibus labore unde 
+              nemo odio perferendis eum possimus.
+              Lorem ipsum dolor sit amet consectetur 
+            adipisicing elit. Facere explicabo dolore
+             modi magni ducimus ratione, rerum
+              pariatur tenetur enim quo atque 
+              nesciunt temporibus labore unde 
+              nemo odio perferendis eum possimus.
+
+
+
 
         </p>
     </main>
